force-app/main/default/objects/Contract_api__c/fields/Contract_Request_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Request_Queue_Id__c</fullName>
    <label>Contract Request Queue Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>