force-app/main/default/objects/Contract_api__c/fields/contractRequestQueueStatusTypeId__c.field-meta.xml
<CustomField>
    <fullName>contractRequestQueueStatusTypeId__c</fullName>
    <label>Request Queue Status ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>