force-app/main/default/objects/Contract_api__c/fields/contractRequestQueueStatusTypeName__c.field-meta.xml
<CustomField>
    <fullName>contractRequestQueueStatusTypeName__c</fullName>
    <label>Request Queue Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>