force-app/main/default/objects/Contract_api__c/fields/Entity_Queue_Status__c.field-meta.xml
<CustomField>
    <fullName>Entity_Queue_Status__c</fullName>
    <label>Entity Queue Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>