force-app/main/default/objects/Contract_api__c/fields/Entity_Queue_Status_ID__c.field-meta.xml
<CustomField>
    <fullName>Entity_Queue_Status_ID__c</fullName>
    <label>Entity Queue Status ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>