force-app/main/default/objects/Contract_api__c/fields/Queue_Status_Type__c.field-meta.xml
<CustomField>
    <fullName>Queue_Status_Type__c</fullName>
    <label>Queue Status Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>