force-app/main/default/objects/Contract_api__c/fields/Queue_Status_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Queue_Status_Type_ID__c</fullName>
    <label>Queue Status Type ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>