force-app/main/default/objects/Contract_api__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contract_Request_Queue_Id__c</columns>
    <columns>Entity_Queue_Status__c</columns>
    <columns>Queue_Status_Type__c</columns>
    <columns>contractRequestQueueStatusTypeName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>